[gd_scene load_steps=4 format=2]

[ext_resource path="res://options/VolumeSettings/VolumeModule.gd" type="Script" id=1]
[ext_resource path="res://utils/ButtonSFX.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/reset.png" type="Texture" id=3]

[node name="VolumeModule" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BusLabel" type="Label" parent="."]
margin_top = 270.0
margin_right = 1024.0
margin_bottom = 284.0
size_flags_horizontal = 3

[node name="VolumeSlider" type="HSlider" parent="."]
margin_top = 289.0
margin_right = 1024.0
margin_bottom = 305.0
max_value = 1.0
step = 0.01

[node name="H" type="HBoxContainer" parent="."]
margin_top = 310.0
margin_right = 1024.0
margin_bottom = 330.0

[node name="Mute" type="Button" parent="H"]
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
text = "Mute"
expand_icon = true
script = ExtResource( 2 )

[node name="Reset" type="Button" parent="H"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Reset"
icon = ExtResource( 3 )
expand_icon = true
script = ExtResource( 2 )

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="toggled" from="H/Mute" to="." method="_on_Mute_toggled"]
[connection signal="pressed" from="H/Reset" to="." method="reset"]
